# sudo-supply

./: .gitmodules  CLAUDE.md  README.md  package-lock.json  package.json  split-repos.sh
.github/workflows/: firmware-release.yml
hardware/: README.md
hardware/firmware/: CMakeLists.txt  README.md  boot.py  code.py  main.c  pico_sdk_import.cmake  sudo_config.h  tusb_config.h  usb_descriptors.c
scripts/: sync-tokens.sh  test-all.sh
src/: middleware.ts
src/app/: layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/cart/: page.tsx
src/app/download/: page.tsx
src/components/: Nav.tsx
src/lib/: products.ts
sudopad-app/: README.md  build.sh  create-dmg.sh  install.sh
sudopad-app/Sudo/: Package.swift
sudopad-app/Sudo/Sources/Sudo/: SudoApp.swift
sudopad-app/Sudo/Sources/Sudo/Models/: ActionResult.swift  PadAction.swift  SupportedApp.swift
sudopad-app/Sudo/Sources/Sudo/Services/: AXButtonFinder.swift  ActionExecutor.swift  AppDetector.swift  HotkeyListener.swift  OCRButtonFinder.swift  OTAUpdater.swift  SudoEngine.swift
sudopad-app/Sudo/Sources/Sudo/Views/: MenuBarView.swift
sudopad-app/SudoPad/: Package.swift
sudopad-app/SudoPad/Sources/SudoPad/: SudoPadApp.swift
sudopad-app/SudoPad/Sources/SudoPad/Models/: ActionResult.swift  PadAction.swift  SupportedApp.swift
sudopad-app/SudoPad/Sources/SudoPad/Services/: AXButtonFinder.swift  ActionExecutor.swift  AppDetector.swift  HotkeyListener.swift  OCRButtonFinder.swift  SudoPadEngine.swift
sudopad-app/SudoPad/Sources/SudoPad/Views/: MenuBarView.swift
